test/cases/parser/wrong_import_as/Main.b
module Main
interface {}

import Foo as 999;
